--- a/AspNetCoreIdentity/appsettings.json
+++ b/AspNetCoreIdentity/appsettings.json
@@ -7,5 +7,24 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "AppSettings": {
+    "TestUsers": [
+      {
+        "FirstName": "MasterUser",
+        "UserName": "masteruser@example.com",
+        "IsAdmin": true
+      },
+      {
+        "FirstName": "User1",
+        "UserName": "user1@example.com",
+        "IsAdmin": false
+      },
+      {
+        "FirstName": "User2",
+        "UserName": "user2@example.com",
+        "IsAdmin": false
+      }
+    ]
   }
 }
