Use SignalR to notify remotely logged-out user to redirect to the login page

--- a/AspNetCoreIdentity/AspNetCoreIdentity.csproj
+++ b/AspNetCoreIdentity/AspNetCoreIdentity.csproj
@@ -12,7 +12,9 @@
     <UserSecretsId>aspnet-AspNetCoreIdentity-b4fa5043-caf7-4e9c-a814-e42e4be7094c</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Gray.Microsoft.AspNetCore.SignalR.Server" Version="0.2.0-alpha1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="1.1.2" />
